# site_checker_project

./: .gitignore  README.md  cron_script.py  manage.py  pyproject.toml  run_tests.py
config/: passenger_wsgi.py  requirements.txt  requirements_base.in  requirements_base.txt  requirements_server.in  requirements_server.txt  requirements_servers.txt  settings.py  settings_min.py  settings_tests.py  urls.py  z_old_requirements_local.txt
requirements/: base.in  local.in  local.txt  production.txt  staging.in  staging.txt  zz_old__requirements_server.txt
site_checker_app/: OLD__models.py  admin.py  apps.py  models.py  settings_app.py  tests.py  views.py
site_checker_app/lib/: shib_auth.py  utility_code.py  version_helper.py
site_checker_app/migrations/: 0001_initial.py
site_checker_app/site_checker_app_templates/: base.html  checksite_list.html  info.html
