[project]
name = "site-checker-project"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "Django~=4.2.0",
    "pip~=24.3.0",
    "python-dotenv~=1.0.0",
    "requests~=2.32.0",
    "urllib3~=1.26.0"  # for downsteam compatibility
]

[dependency-groups]
staging = [
    "mysqlclient~=2.1.0",
]
prod = [
    "mysqlclient~=2.1.0",
]
